Final project.Fixed merge conflicts.Fixed databases.Added deleting and editing functionality to all admin stuff.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,12 +4,16 @@
     text-align: center;
 }
 
-.form-row .card {
+.form-row.card {
     width: auto;
     justify-content: center;
 }
 
-.form-row .flight-card {
+.card-success {
+    max-width: 400px;
+}
+
+.form-row.flight-card {
     width: 100%;
     margin: 5px 0;
 }
@@ -37,6 +41,7 @@ a:hover {
 
 .booking-form {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
 }
