--- a/src/main/resources/templates/booking-with-return.html
+++ b/src/main/resources/templates/booking-with-return.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <title>Airline Service</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 
-<nav class="navbar navbar-light bg-secondary">
-    <a class="navbar-brand text-white-50" href="/">
-        Airline Service
-    </a>
-</nav>
+<nav th:replace="header :: headerFragment"></nav>
 
 
 <div class="container">
@@ -40,10 +36,14 @@
                     <span th:text="${returnSchedule.getRemCapacity()}" />
                 </div>
 
-                <label for="bookerName">Your Name</label>
-                <input type="text" class="form-control" name="name" id="bookerName" placeholder="Full Name...">
-                <input type="hidden" name="toScheduleId" th:value="${toSchedule.id}">
-                <input type="hidden" name="returnScheduleId" th:value="${returnSchedule.id}">
+                <div class="form-row row">
+                    <label for="bookerName">Your Name</label>
+                    <input type="text" class="form-control" name="name" id="bookerName" placeholder="Full Name...">
+                    <input type="hidden" name="toScheduleId" th:value="${toSchedule.id}">
+                    <input type="hidden" name="returnScheduleId" th:value="${returnSchedule.id}">
+                </div>
+
+
 
 
                 <input class="btn btn-outline-dark" type="submit" value="Submit">
@@ -53,10 +53,5 @@
 </div>
 
 
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
