--- a/src/main/resources/templates/flight-admin.html
+++ b/src/main/resources/templates/flight-admin.html
@@ -8,14 +8,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-light bg-secondary">
-    <a class="navbar-brand text-white-50" href="/">
-        Airline Service
-    </a>
-    <a class="navbar-brand text-white-50" href="/logout">
-        Logout
-    </a>
-</nav>
+<nav th:replace="header :: headerFragment"></nav>
 
 
 <div class="container">
@@ -47,16 +40,13 @@
                         <td><span th:text="${flight.name}" /></td>
                         <td><span th:text="${flight.capacity}" /></td>
                         <td>
-                            <a th:href="@{/delete-flight/(id=${flight.id})}">Delete</a>
-                        </td>
-                        <td>
                             <form method="post" action="/delete-flight">
                                 <input type="hidden" name="id" th:value="${flight.id}">
                                 <input type="submit" class="btn btn-outline-dark" value="Delete" >
                             </form>
                         </td>
                         <td>
-                            <button id="flightModalButton" type="button" class="btn btn-primary" data-toggle="modal"  data-target="#exampleModal" th:attr="data-object-id=${flight.id}, data-object-name=${flight.name}, data-object-capacity=${flight.capacity}">Edit</button>
+                            <button type="button" class="btn btn-primary flightModalButton" data-toggle="modal"  data-target="#exampleModal" th:attr="data-object-id=${flight.id}, data-object-name=${flight.name}, data-object-capacity=${flight.capacity}">Edit</button>
                             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
@@ -76,7 +66,7 @@
                                                     <input type="number" class="form-control" id="capacity" name="capacity">
                                                 </div>
 
-                                                <input type="submit" class="btn btn-primary">Submit</input>
+                                                <input type="submit" class="btn btn-primary" value="Submit">
                                             </form>
                                         </div>
 
@@ -93,10 +83,6 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script type="text/javascript" src="/js/custom.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
 
